syntax ="proto3";

package stockpb;

option go_package = "github.com/zandala88/gorder/internal/common/genproto/stdockpb";

import "orderpb/order.proto";

service stockService {
  rpc GetItems(GetItemsRequest) returns (GetItemResponse) ;
  rpc CheckIfItemsInStock(CheckIfItemsInStockRequest) returns (CheckIfItemsInStockResponse) ;
}
   
message GetItemsRequest {
    repeated string ItemIDs = 1;
} 


message GetItemResponse {
    repeated orderpb.Item items =1;
}

message CheckIfItemsInStockRequest {
    repeated orderpb.ItemWithQuantity Items =1;
}

message CheckIfItemsInStockResponse {
    int32 InStock = 1;
    repeated orderpb.Item items = 2;
}